# stereoMatch

./: .gitignore
CPP/: CMakeLists.txt  README.md  main.cpp  run.sh
CPP/include/: BlockMatch.h  bm_types.h  bm_util.h
CPP/src/: BlockMatch.cpp
cpp/: CMakeLists.txt  README.md  main.cpp  run.sh
cpp/doc/: LRCheckMethod.md
cpp/googleTest/: blockMatchTest.cpp  imageTest.cpp  pyramidCreateTest.cpp
cpp/include/: BlockMatch.h  bm_util.h  pyramidCreate.h
cpp/src/: BlockMatch.cpp  pyramidCreate.cpp
python/: README.md  calibrate.py  main.py  settings.conf
python/CameraCorrection/: CameraMatrix.py  __init__.py
python/MultiProcess/: multiImg.py
python/Rectification/: Rectification.py  __init__.py
python/StereoMatch/: __init__.py  stereo_match.py
python/core/: SAD.py  __init__.py
python/lib/: calibrating.py  calibration.py
python/test/: testMultiProcess.py  testWindows.py
